<resources>
    <string name="app_name">GeoBoard1</string>
    <string name="radioButtonSecuritySetting1">Security Setting (Location)</string>
    <string name="radioButtonSecuritySetting2">Security Setting (NFC)</string>
    <string name="radioButtonSecuritySetting3">Security Setting (Accelerometer)</string>
    <string name="apply">Apply</string>
    <string name="logout">Logout</string>
    <string name="logo">Logo</string>
    <string name="securityHeading">Security Settings</string>
    <string name="signInHere">Already Registered, sign in here!</string>
    <string name="registerUserButton">Register User</string>
    <string name="userRegistrationHeader">User Registration</string>
    <string name="editTextEmail">Enter your email</string>
    <string name="editTextPassword">Enter your password</string>
    <string name="textViewRegisterHere">Not registered yet? Register here!</string>
    <string name="userLoginHeader">User Login</string>
    <string name="loginButton">Login</string>
    <string name="buttonCreateGeoBoard">Create \nGeo-Board</string>
    <string name="buttonViewGeoBoard">View \nGeo-boards</string>
    <string name="title_activity_maps">Map</string>
    <string name="geoBoardTitleTextView">Title:</string>
    <string name="geoBoardSubjectTextView">Subject:</string>
    <string name="geoBoardMessageHint">Add your message here:</string>
    <string name="geoBoardTitleHint">Add title here:</string>
    <string name="geoBoardSubjectHint">Add subject here:</string>
    <string name="nfcTagImage">Tap NFC Tag:</string>
    <string name="genericImage">generic image</string>
    <string name="my_geoboards">My GeoBoards</string>
    <string name="my_geoboard">My GeoBoard</string>
    <string name="location">location</string>
    <string name="subject">subject</string>
    <string name="textViewUserName">username</string>
    <string name="multiLineTextViewMessage">message goes here!!!</string>
    <string name="AddMessageButton">Add Message</string>
    <string name="MapButton">Map</string>
</resources>
