<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.example.project.geoboard1.SecurityChoiceActivity"
        android:id="@+id/activity_security_choice"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/banner1"
            android:id="@+id/imageView"
            android:scaleType="fitStart"
            android:contentDescription="@string/logo"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/securityHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewUserEmail"
                android:textAlignment="center"
                android:textSize="26sp"
                android:layout_weight="1"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:paddingStart="70dp"
                android:paddingEnd="0dp"/>

            <Button
                android:text="@string/logout"
                android:layout_width="73dp"
                android:layout_height="35dp"
                android:id="@+id/buttonLogout"
                android:textSize="12sp"
                />
        </LinearLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroupSecurityOptions"
            android:layout_marginTop="75dp"
            android:layout_marginStart="100dp">

            <RadioButton
                android:text="@string/radioButtonSecuritySetting1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonMist"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:minWidth="120dp"
                android:checked="true"
                android:textSize="18sp"
                android:layout_marginTop="20dp"/>

            <RadioButton
                android:text="@string/radioButtonSecuritySetting2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonShowers"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:minWidth="120dp"
                android:textSize="18sp"
                android:layout_marginTop="20dp"/>

            <RadioButton
                android:text="@string/radioButtonSecuritySetting3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonRain"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:minWidth="120dp"
                android:textSize="18sp"
                android:layout_marginTop="20dp"/>

        </RadioGroup>

        <Button
            android:text="@string/apply"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSecurity"
            android:clickable="true"
            android:layout_marginTop="60dp"
            android:layout_marginStart="95dp"
            android:layout_width="190dp"
            android:textSize="18sp"/>

    </LinearLayout>

