<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.project.geoboard1.MainActivity">

    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.example.project.geoboard1.AppHeaderFragment"
        android:id="@+id/fragment4"
        tools:layout="@layout/app_header"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <android.support.constraint.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="90dp">

        <TextView
            android:text="@string/userLoginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <EditText
            android:inputType="textEmailAddress"
            android:hint="@string/editTextEmail"
            android:id="@+id/editTextEmail"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="75dp"
            android:layout_width="220dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:inputType="textPassword"
            android:hint="@string/editTextPassword"
            android:id="@+id/editTextPassword"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            tools:layout_constraintTop_creator="1"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"/>

        <Button
            android:text="@string/loginButton"
            android:id="@+id/buttonSignin"
            android:background="@drawable/my_style_button"
            android:src="@drawable/wooden_background"
            android:clickable="true"
            android:layout_width="200dp"
            android:layout_height="49dp"
            tools:layout_constraintTop_creator="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="75dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/textViewRegister"
            android:textAlignment="center"
            android:text="@string/textViewRegisterHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignin"
            android:layout_marginTop="32dp"
            android:textSize="18sp"/>


    </android.support.constraint.ConstraintLayout>

</RelativeLayout>
