<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_create_geo_board"
    tools:context="com.example.project.geoboard1.CreateGeoBoard"
    app:layout_editor_absoluteX="0dp"
    app:layout_editor_absoluteY="80dp"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="80dp"
    android:layerType="none">

    <fragment
        android:layout_width="0dp"
        android:name="com.example.project.geoboard1.AppHeaderFragment"
        android:layout_alignParentTop="true"
        android:id="@+id/fragment5"
        tools:layout="@layout/app_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="@+id/frameLayout"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_height="100dp"
        />

    <FrameLayout
        android:background="@drawable/background_message_image"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="@+id/fragment5"
        android:layout_marginTop="85dp"
        app:layout_constraintVertical_bias="0.65999997"
        android:layout_marginBottom="50dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_width="0dp">

    </FrameLayout>

    <EditText
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/geoBoardMessageTextArea"
        android:hint="@string/geoBoardMessageHint"
        android:gravity="top|start"
        app:layout_constraintLeft_toLeftOf="@+id/frameLayout"
        app:layout_constraintRight_toRightOf="@+id/frameLayout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="300dp"
        app:layout_constraintTop_toTopOf="@+id/frameLayout"
        android:layout_marginTop="24dp"
        android:layout_height="400dp"
        android:textSize="24sp"
        android:textColor="?attr/actionMenuTextColor"
        />

    <Button
        android:text="@string/AddMessageButton"
        android:background="@drawable/my_style_button"
        android:src="@drawable/wooden_background"
        android:clickable="true"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:id="@+id/geoBoardAddButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="saveGeoBoardInfo"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginStart="16dp"/>

    <Button
        android:text="@string/MapButton"
        android:background="@drawable/my_style_button"
        android:src="@drawable/wooden_background"
        android:clickable="true"
        android:layout_width="150dp"
        android:layout_height="49dp"
        android:id="@+id/mapButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toLeftOf="@+id/geoBoardAddButton"
        android:layout_marginEnd="8dp"
        android:onClick="backButton"/>

</android.support.constraint.ConstraintLayout>
